Añadido clase 'btn' a los botones que contienen números y reordenado para que se muestre del 0 al 9

--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
             <span class="operands"></span>
         </div>
         <div class="buttons">
-            <button id="one">1</button>
-            <button id="two">2</button>
-            <button id="three">3</button>
-            <button id="four">4</button>
-            <button id="five">5</button>
-            <button id="six">6</button>
-            <button id="seven">7</button>
-            <button id="eigth">8</button>
-            <button id="nine">9</button>
-            <button id="zero">0</button>
+            <button class="btn" id="zero">0</button>
+            <button class="btn" id="one">1</button>
+            <button class="btn" id="two">2</button>
+            <button class="btn" id="three">3</button>
+            <button class="btn" id="four">4</button>
+            <button class="btn" id="five">5</button>
+            <button class="btn" id="six">6</button>
+            <button class="btn" id="seven">7</button>
+            <button class="btn" id="eigth">8</button>
+            <button class="btn" id="nine">9</button>
+            
             <button id="equal">=</button>
             <button id="clear">CE</button>
             <button id="add">+</button>
@@ -29,5 +30,7 @@
             <button id="divide">/</button>
         </div>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
