--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CALCULADORA!!</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="calculator">
@@ -24,10 +25,10 @@
             
             <button id="equal">=</button>
             <button id="clear">CE</button>
-            <button id="add">+</button>
-            <button id="subtract">-</button>
-            <button id="multiply">*</button>
-            <button id="divide">/</button>
+            <button class="ops" id="addition">+</button>
+            <button class="ops" id="subtract">-</button>
+            <button class="ops" id="multiply">*</button>
+            <button class="ops" id="divide">/</button>
         </div>
     </div>
 
