--- a/index.html
+++ b/index.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CALCULADORA!!</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <div class="calculator">
         <div class="display">
             <span class="operands"></span>
         </div>
         <div class="buttons">
-            <button class="btn" id="zero">0</button>
-            <button class="btn" id="one">1</button>
-            <button class="btn" id="two">2</button>
-            <button class="btn" id="three">3</button>
-            <button class="btn" id="four">4</button>
-            <button class="btn" id="five">5</button>
-            <button class="btn" id="six">6</button>
-            <button class="btn" id="seven">7</button>
-            <button class="btn" id="eigth">8</button>
-            <button class="btn" id="nine">9</button>
-            
-            <button id="equal">=</button>
-            <button id="clear">CE</button>
-            <button class="ops" id="addition">+</button>
-            <button class="ops" id="subtract">-</button>
-            <button class="ops" id="multiply">*</button>
-            <button class="ops" id="divide">/</button>
+            <div class="numbers-result">
+                <button class="btn" id="one">1</button>
+                <button class="btn" id="two">2</button>
+                <button class="btn" id="three">3</button>
+                <button class="btn" id="four">4</button>
+                <button class="btn" id="five">5</button>
+                <button class="btn" id="six">6</button>
+                <button class="btn" id="seven">7</button>
+                <button class="btn" id="eigth">8</button>
+                <button class="btn" id="nine">9</button>
+                <button class="btn" id="zero">0</button>
+                <button id="equal">=</button>
+                <button id="clear">CE</button>
+            </div>
+
+            <div class="operations">
+                <button class="ops" id="addition">+</button>
+                <button class="ops" id="subtract">-</button>
+                <button class="ops" id="multiply">*</button>
+                <button class="ops" id="divide">/</button>
+            </div>
         </div>
     </div>
 
     <script src="./script.js"></script>
 </body>
+
 </html>
